bee-common/bee-packable/bee-packable-derive/tests/packable/fail/missing_tag_type_enum.stderr
error: Enums that derive `Packable` require a `#[packable(tag_type = ...)]` attribute.
  --> $DIR/missing_tag_type_enum.rs:13:10
   |
13 | pub enum OptI32 {
   |          ^^^^^^
